// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate cross-cloud workloads to Azure with migration reports and code conversion. Supports Lambda→Functions, Fargate→Container Apps, Kubernetes→Container Apps, Cloud Run→Container Apps, Spring Boot→Container Apps. WHEN: migrate Lambda to Functions, AWS to Azure, Lambda assessment, convert serverless, readiness report, from AWS, from GCP, Cloud Run migration, Fargate to ACA, Kubernetes to ACA, GKE to Azure, Spring Boot to Container Apps.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "boot",
    "cli",
    "cloud",
    "code",
    "container",
    "conversion",
    "convert",
    "cross-cloud",
    "deploy",
    "fargate",
    "from",
    "function",
    "functions",
    "kubernetes",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "readiness",
    "report",
    "reports",
    "serverless",
    "spring",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "boot",
  "cli",
  "cloud",
  "code",
  "container",
  "conversion",
  "convert",
  "cross-cloud",
  "deploy",
  "fargate",
  "from",
  "function",
  "functions",
  "kubernetes",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "readiness",
  "report",
  "reports",
  "serverless",
  "spring",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
